[package]
name = "snowcloud"
version = "0.1.1"
rust-version = "1.65.0"
edition = "2021"
description = "small crate for creating custom snowflakes that provides thread safe and non thread safe generators"
readme = "README.md"
homepage = "https://github.com/DAC098/snowcloud"
repository = "https://github.com/DAC098/snowcloud"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "gen"
harness = false

[dependencies]

[dev-dependencies]
criterion = "0.4"
