[package]
name = "snowcloud"
version = "0.3.0"
rust-version = "1.65.0"
edition = "2021"
description = "small crate for creating custom snowflakes that provides thread safe and non thread safe generators"
readme = "README.md"
homepage = "https://github.com/DAC098/snowcloud"
repository = "https://github.com/DAC098/snowcloud"
license = "MIT"
keywords = ["snowflake", "serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "gen"
harness = false

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.4"
serde_derive = { version = "1" }
serde_json = { version = "1" }
