[package]
name = "snowcloud"
version = "0.4.0"
rust-version = "1.65.0"
edition = "2021"
description = "small crate for creating custom snowflakes that provides thread safe and non thread safe generators"
readme = "README.md"
homepage = "https://github.com/DAC098/snowcloud"
repository = "https://github.com/DAC098/snowcloud"
license = "MIT"
keywords = ["snowflake", "serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "snowcloud-core",
    "snowcloud-flake",
    "snowcloud-cloud"
]

[[bench]]
name = "gen"
harness = false

[features]
serde = ["snowcloud-flake/serde"]
postgres = ["snowcloud-flake/postgres"]

[dependencies]
snowcloud-core = { path = "./snowcloud-core", version = "0.1.0" }
snowcloud-flake = { path = "./snowcloud-flake", version = "0.1.0" }
snowcloud-cloud = { path = "./snowcloud-cloud", version = "0.1.0" }

[dev-dependencies]
criterion = "0.4"
serde_derive = { version = "1" }
serde_json = { version = "1" }
