[package]
name = "snowcloud-cloud"
version = "0.1.0"
rust-version = "1.65.0"
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/DAC098/snowcloud"
repository = "https://github.com/DAC098/snowcloud"
license = "MIT"
keywords = ["snowcloud", "snowflake", "serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snowcloud-core = { path = "../snowcloud-core", version = "0.1.0" }

[dev-dependencies]
criterion = "0.4"
snowcloud-flake = { path = "../snowcloud-flake", version = "0.1.0" }
